// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreditsHistorySection renders loading state when creditsHistoryData is undefined 1`] = `
<div>
  <div
    class="chakra-container css-101z6i4"
  >
    <div
      class="css-ici0xu"
      id="issued-retired-chart"
    >
      <div
        class="css-a6t5rc"
      >
        <div
          class="css-12rn99f"
          id="issued-retired-chart-header"
        >
          <div
            class="css-12q1yrm"
          >
            <div
              class="chakra-stack css-1igwmid"
            >
              <p
                class="chakra-text className css-v7dfld"
                style="font-family: fontFamily;"
                variable="variable"
              >
                World
              </p>
            </div>
          </div>
          <div
            class="css-k44w5r"
          >
            <div
              class="chakra-stack css-s7zwns"
            >
              <div
                class="chakra-stack css-8g8ihq"
              >
                <div
                  aria-controls="popover-content-:r1:"
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  class="chakra-stack css-8g8ihq"
                  id="popover-trigger-:r1:"
                >
                  <div
                    class="chakra-input__group css-bx0blc"
                    data-group="true"
                  >
                    <input
                      class="chakra-input css-x1lq49"
                      data-testid="dropdown_input"
                      placeholder="Choose a region"
                    />
                    <div
                      class="chakra-input__right-element css-1pgjczt"
                    >
                      <button
                        aria-label="toggle menu"
                        class="chakra-button css-es0esp"
                        data-testid="dropdown-button"
                        type="button"
                      >
                        <svg
                          class="chakra-icon css-c0air1"
                          focusable="false"
                          viewBox="0 0 8 4"
                        >
                          <path
                            d="M3.99911 3.9034L0.191406 0.0957031H7.80681L3.99911 3.9034Z"
                            fill="currentColor"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="chakra-popover__popper css-1qq679y"
                  style="visibility: hidden; position: absolute; inset: 0 auto auto 0;"
                >
                  <section
                    aria-describedby="popover-body-:r1:"
                    class="chakra-popover__content css-h4trp2"
                    data-testid="dropdown-body"
                    id="popover-content-:r1:"
                    role="dialog"
                    style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.95) translateZ(0);"
                    tabindex="-1"
                  >
                    <div
                      class="chakra-popover__body css-1ews2c8"
                      id="popover-body-:r1:"
                    >
                      <ul
                        class="css-155za0w"
                        role="list"
                      >
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-0"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Southern Asia
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-1"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Northern Europe
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-2"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Southern Europe
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-3"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Northern Africa
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-4"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Polynesia
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-5"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Sub Saharan Africa
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-6"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Latin America and the Caribbean
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-7"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Western Asia
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-8"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Australia and New Zealand
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-9"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Western Europe
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-10"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Eastern Europe
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-11"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Northern America
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-12"
                        >
                          <div
                            class="css-18biwo"
                          >
                            South Eastern Asia
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-13"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Eastern Asia
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-14"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Melanesia
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-15"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Micronesia
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-16"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Central Asia
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-17"
                        >
                          <div
                            class="css-18biwo"
                          >
                            World
                          </div>
                        </li>
                      </ul>
                    </div>
                  </section>
                </div>
              </div>
            </div>
          </div>
          <div
            class="css-1pbgu9n"
          >
            <div
              class="chakra-stack css-1xum4w9"
            >
              <span
                class="className selected css-1eveppl"
              >
                <span
                  class="css-1ny2kle"
                >
                  Max
                </span>
              </span>
              <span
                class="className notSelected css-1eveppl"
              >
                <span
                  class="css-1ny2kle"
                >
                  12m
                </span>
              </span>
              <span
                class="className notSelected css-1eveppl"
              >
                <span
                  class="css-1ny2kle"
                >
                  6m
                </span>
              </span>
              <span
                class="className notSelected css-1eveppl"
              >
                <span
                  class="css-1ny2kle"
                >
                  1m
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-itarp8"
      >
        <div
          class="css-usvo7w"
          id="issued-retired-chart-header"
        >
          <div
            class="css-81msik"
          >
            <div
              class="chakra-stack css-12s2e4i"
            >
              <div
                class="chakra-stack css-187az2"
              >
                <div
                  class="chakra-skeleton css-vg189d"
                />
                <p
                  class="chakra-text css-0"
                >
                  Issued
                </p>
              </div>
              <div
                class="chakra-stack__divider css-17ry2tf"
              />
              <div
                class="chakra-stack css-187az2"
              >
                <div
                  class="chakra-skeleton css-vg189d"
                />
                <p
                  class="chakra-text css-0"
                >
                  Retired
                </p>
              </div>
            </div>
          </div>
          <div
            class="css-17tz4s6"
          >
            <div
              class="chakra-skeleton css-2trlzm"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</div>
`;

exports[`CreditsHistorySection renders the widget when carbonMapData and creditsHistoryData are defined 1`] = `
<div>
  <div
    class="chakra-container css-101z6i4"
  >
    <div
      class="css-ici0xu"
      id="issued-retired-chart"
    >
      <div
        class="css-a6t5rc"
      >
        <div
          class="css-12rn99f"
          id="issued-retired-chart-header"
        >
          <div
            class="css-12q1yrm"
          >
            <div
              class="chakra-stack css-1igwmid"
            >
              <button
                aria-label="clear continent filter"
                class="chakra-button css-17492fa"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="chakra-icon css-n5gr1q"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                    fill="currentColor"
                  />
                </svg>
              </button>
              <p
                class="chakra-text className css-v7dfld"
                style="font-family: fontFamily;"
                variable="variable"
              >
                Latin America and the Caribbean
              </p>
            </div>
          </div>
          <div
            class="css-k44w5r"
          >
            <div
              class="chakra-stack css-s7zwns"
            >
              <div
                class="chakra-stack css-8g8ihq"
              >
                <div
                  aria-controls="popover-content-:r3:"
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  class="chakra-stack css-8g8ihq"
                  id="popover-trigger-:r3:"
                >
                  <div
                    class="chakra-input__group css-bx0blc"
                    data-group="true"
                  >
                    <input
                      class="chakra-input css-x1lq49"
                      data-testid="dropdown_input"
                      placeholder="Colombia"
                    />
                    <div
                      class="chakra-input__right-element css-1pgjczt"
                    >
                      <button
                        aria-label="toggle menu"
                        class="chakra-button css-es0esp"
                        data-testid="dropdown-button"
                        type="button"
                      >
                        <svg
                          class="chakra-icon css-c0air1"
                          focusable="false"
                          viewBox="0 0 8 4"
                        >
                          <path
                            d="M3.99911 3.9034L0.191406 0.0957031H7.80681L3.99911 3.9034Z"
                            fill="currentColor"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="chakra-popover__popper css-1qq679y"
                  style="visibility: hidden; position: absolute; inset: 0 auto auto 0;"
                >
                  <section
                    aria-describedby="popover-body-:r3:"
                    class="chakra-popover__content css-h4trp2"
                    data-testid="dropdown-body"
                    id="popover-content-:r3:"
                    role="dialog"
                    style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.95) translateZ(0);"
                    tabindex="-1"
                  >
                    <div
                      class="chakra-popover__body css-1ews2c8"
                      id="popover-body-:r3:"
                    >
                      <ul
                        class="css-155za0w"
                        role="list"
                      >
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-0"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Anguilla
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-1"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Antigua and Barbuda
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-2"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Argentina
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-3"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Aruba
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-4"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Bahamas
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-5"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Barbados
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-6"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Belize
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-7"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Bolivia (Plurinational State of)
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-8"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Bonaire, Sint Eustatius and Saba
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-9"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Bouvet Island
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-10"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Brazil
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-11"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Cayman Islands
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-12"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Chile
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-13"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Colombia
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-14"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Costa Rica
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-15"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Cuba
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-16"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Curaçao
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-17"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Dominica
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-18"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Dominican Republic
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-19"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Ecuador
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-20"
                        >
                          <div
                            class="css-18biwo"
                          >
                            El Salvador
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-21"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Falkland Islands (Malvinas)
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-22"
                        >
                          <div
                            class="css-18biwo"
                          >
                            French Guiana
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-23"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Grenada
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-24"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Guadeloupe
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-25"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Guatemala
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-26"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Guyana
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-27"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Haiti
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-28"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Honduras
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-29"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Jamaica
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-30"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Martinique
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-31"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Mexico
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-32"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Montserrat
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-33"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Nicaragua
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-34"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Panama
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-35"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Paraguay
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-36"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Peru
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-37"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Puerto Rico
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-38"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Saint Barthélemy
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-39"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Saint Kitts and Nevis
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-40"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Saint Lucia
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-41"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Saint Martin (French part)
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-42"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Saint Vincent and the Grenadines
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-43"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Sint Maarten (Dutch part)
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-44"
                        >
                          <div
                            class="css-18biwo"
                          >
                            South Georgia and the South Sandwich Islands
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-45"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Suriname
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-46"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Trinidad and Tobago
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-47"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Turks and Caicos Islands
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-48"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Uruguay
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-49"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Venezuela (Bolivarian Republic of)
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-50"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Virgin Islands (British)
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-51"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Virgin Islands (U.S.)
                          </div>
                        </li>
                      </ul>
                    </div>
                  </section>
                </div>
              </div>
            </div>
          </div>
          <div
            class="css-1pbgu9n"
          >
            <div
              class="chakra-stack css-1xum4w9"
            >
              <span
                class="className selected css-1eveppl"
              >
                <span
                  class="css-1ny2kle"
                >
                  Max
                </span>
              </span>
              <span
                class="className notSelected css-1eveppl"
              >
                <span
                  class="css-1ny2kle"
                >
                  12m
                </span>
              </span>
              <span
                class="className notSelected css-1eveppl"
              >
                <span
                  class="css-1ny2kle"
                >
                  6m
                </span>
              </span>
              <span
                class="className notSelected css-1eveppl"
              >
                <span
                  class="css-1ny2kle"
                >
                  1m
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-itarp8"
      >
        <div
          class="chakra-stack css-1unzjcy"
        >
          <div
            class="css-vt2ank"
            id="issued-retired-chart-header"
          >
            <div
              class="css-1q0c0do"
            >
              <div
                class="chakra-stack css-12s2e4i"
              >
                <div
                  class="chakra-stat className css-1882jtg"
                >
                  <dl>
                    <dd
                      class="chakra-stat__number css-1axeus7"
                    >
                      <p
                        class="chakra-text css-189tfrj"
                      >
                        141
                      </p>
                      <p
                        class="chakra-text css-6z8slg"
                      >
                        M
                      </p>
                    </dd>
                    <dt
                      class="chakra-stat__label css-14go5ty"
                    >
                      Issued
                    </dt>
                  </dl>
                </div>
                <div
                  class="chakra-stack__divider css-17ry2tf"
                />
                <div
                  class="chakra-stat className css-1882jtg"
                >
                  <dl>
                    <dd
                      class="chakra-stat__number css-1axeus7"
                    >
                      <p
                        class="chakra-text css-1b98lsf"
                      >
                        51.8
                      </p>
                      <p
                        class="chakra-text css-6z8slg"
                      >
                        M
                      </p>
                    </dd>
                    <dt
                      class="chakra-stat__label css-14go5ty"
                    >
                      Retired
                    </dt>
                  </dl>
                </div>
              </div>
            </div>
            <div
              class="css-17tz4s6"
            >
              <div
                style="width: 100%; height: 100%;"
              />
            </div>
          </div>
          <p
            class="chakra-text className css-10xb65b"
          >
            Data represented as of 21 Jul 2023, 02:25:43
          </p>
        </div>
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</div>
`;

exports[`CreditsHistorySection renders the widget when carbonMapData and creditsHistoryData are defined but has no chart data 1`] = `
<div>
  <div
    class="chakra-container css-101z6i4"
  >
    <div
      class="css-ici0xu"
      id="issued-retired-chart"
    >
      <div
        class="css-a6t5rc"
      >
        <div
          class="css-12rn99f"
          id="issued-retired-chart-header"
        >
          <div
            class="css-12q1yrm"
          >
            <div
              class="chakra-stack css-1igwmid"
            >
              <button
                aria-label="clear continent filter"
                class="chakra-button css-17492fa"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="chakra-icon css-n5gr1q"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                    fill="currentColor"
                  />
                </svg>
              </button>
              <p
                class="chakra-text className css-v7dfld"
                style="font-family: fontFamily;"
                variable="variable"
              >
                Latin America and the Caribbean
              </p>
            </div>
          </div>
          <div
            class="css-k44w5r"
          >
            <div
              class="chakra-stack css-s7zwns"
            >
              <div
                class="chakra-stack css-8g8ihq"
              >
                <div
                  aria-controls="popover-content-:r5:"
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  class="chakra-stack css-8g8ihq"
                  id="popover-trigger-:r5:"
                >
                  <div
                    class="chakra-input__group css-bx0blc"
                    data-group="true"
                  >
                    <input
                      class="chakra-input css-x1lq49"
                      data-testid="dropdown_input"
                      placeholder="Colombia"
                    />
                    <div
                      class="chakra-input__right-element css-1pgjczt"
                    >
                      <button
                        aria-label="toggle menu"
                        class="chakra-button css-es0esp"
                        data-testid="dropdown-button"
                        type="button"
                      >
                        <svg
                          class="chakra-icon css-c0air1"
                          focusable="false"
                          viewBox="0 0 8 4"
                        >
                          <path
                            d="M3.99911 3.9034L0.191406 0.0957031H7.80681L3.99911 3.9034Z"
                            fill="currentColor"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="chakra-popover__popper css-1qq679y"
                  style="visibility: hidden; position: absolute; inset: 0 auto auto 0;"
                >
                  <section
                    aria-describedby="popover-body-:r5:"
                    class="chakra-popover__content css-h4trp2"
                    data-testid="dropdown-body"
                    id="popover-content-:r5:"
                    role="dialog"
                    style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.95) translateZ(0);"
                    tabindex="-1"
                  >
                    <div
                      class="chakra-popover__body css-1ews2c8"
                      id="popover-body-:r5:"
                    >
                      <ul
                        class="css-155za0w"
                        role="list"
                      >
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-0"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Anguilla
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-1"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Antigua and Barbuda
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-2"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Argentina
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-3"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Aruba
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-4"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Bahamas
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-5"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Barbados
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-6"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Belize
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-7"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Bolivia (Plurinational State of)
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-8"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Bonaire, Sint Eustatius and Saba
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-9"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Bouvet Island
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-10"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Brazil
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-11"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Cayman Islands
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-12"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Chile
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-13"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Colombia
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-14"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Costa Rica
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-15"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Cuba
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-16"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Curaçao
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-17"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Dominica
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-18"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Dominican Republic
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-19"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Ecuador
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-20"
                        >
                          <div
                            class="css-18biwo"
                          >
                            El Salvador
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-21"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Falkland Islands (Malvinas)
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-22"
                        >
                          <div
                            class="css-18biwo"
                          >
                            French Guiana
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-23"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Grenada
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-24"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Guadeloupe
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-25"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Guatemala
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-26"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Guyana
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-27"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Haiti
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-28"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Honduras
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-29"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Jamaica
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-30"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Martinique
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-31"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Mexico
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-32"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Montserrat
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-33"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Nicaragua
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-34"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Panama
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-35"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Paraguay
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-36"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Peru
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-37"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Puerto Rico
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-38"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Saint Barthélemy
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-39"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Saint Kitts and Nevis
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-40"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Saint Lucia
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-41"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Saint Martin (French part)
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-42"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Saint Vincent and the Grenadines
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-43"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Sint Maarten (Dutch part)
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-44"
                        >
                          <div
                            class="css-18biwo"
                          >
                            South Georgia and the South Sandwich Islands
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-45"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Suriname
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-46"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Trinidad and Tobago
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-47"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Turks and Caicos Islands
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-48"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Uruguay
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-49"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Venezuela (Bolivarian Republic of)
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-50"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Virgin Islands (British)
                          </div>
                        </li>
                        <li
                          class="css-1ca3ht4"
                          data-testid="dropdown-item-51"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Virgin Islands (U.S.)
                          </div>
                        </li>
                      </ul>
                    </div>
                  </section>
                </div>
              </div>
            </div>
          </div>
          <div
            class="css-1pbgu9n"
          >
            <div
              class="chakra-stack css-1xum4w9"
            >
              <span
                class="className selected css-1eveppl"
              >
                <span
                  class="css-1ny2kle"
                >
                  Max
                </span>
              </span>
              <span
                class="className notSelected css-1eveppl"
              >
                <span
                  class="css-1ny2kle"
                >
                  12m
                </span>
              </span>
              <span
                class="className notSelected css-1eveppl"
              >
                <span
                  class="css-1ny2kle"
                >
                  6m
                </span>
              </span>
              <span
                class="className notSelected css-1eveppl"
              >
                <span
                  class="css-1ny2kle"
                >
                  1m
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-itarp8"
      >
        <div
          class="className css-yrn9ak"
        >
          Selected data is currently unavailable within the carbon registries.
        </div>
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</div>
`;
